package documents

import (
	"fmt"

	"github.com/centrifuge/centrifuge-protobufs/gen/go/coredocument"

	"github.com/centrifuge/go-centrifuge/anchors"
	"github.com/centrifuge/go-centrifuge/centerrors"
	"github.com/centrifuge/go-centrifuge/crypto"
	"github.com/centrifuge/go-centrifuge/errors"
	"github.com/centrifuge/go-centrifuge/identity"
	"github.com/centrifuge/go-centrifuge/utils"
	"github.com/ethereum/go-ethereum/common/hexutil"
)

// Validator is an interface every Validator (atomic or group) should implement
type Validator interface {
	// Validate validates the updates to the model in newState.
	Validate(oldState Model, newState Model) error
}

// ValidatorGroup implements Validator for validating a set of validators.
type ValidatorGroup []Validator

//Validate will execute all group specific atomic validations
func (group ValidatorGroup) Validate(oldState Model, newState Model) (errs error) {

	for _, v := range group {
		if err := v.Validate(oldState, newState); err != nil {
			errs = errors.AppendError(errs, err)
		}
	}
	return errs
}

// IsCurrencyValid checks if the currency is of length 3
func IsCurrencyValid(cur string) bool {
	return utils.IsStringOfLength(cur, 3)
}

// ValidatorFunc implements Validator and can be used as a adaptor for functions
// with specific function signature
type ValidatorFunc func(old, new Model) error

// Validate passes the arguments to the underlying validator
// function and returns the results
func (vf ValidatorFunc) Validate(old, new Model) error {
	return vf(old, new)
}

// UpdateVersionValidator validates if the new core document is properly derived from old one
func UpdateVersionValidator() Validator {
	return ValidatorFunc(func(old, new Model) error {
		if old == nil || new == nil {
			return errors.New("need both the old and new model")
		}

		oldDM, err := old.PackCoreDocument()
		if err != nil {
			return errors.New("failed to fetch old core document: %v", err)
		}

		newDM, err := new.PackCoreDocument()
		if err != nil {
			return errors.New("failed to fetch new core document: %v", err)
		}
		if oldDM.Document == nil {
			return errors.New("coredoc is nil")
		}
		if newDM.Document == nil {
			return errors.New("coredoc is nil")
		}
		oldCD := oldDM.Document
		newCD := newDM.Document

		checks := []struct {
			name string
			a, b []byte
		}{
			{
				name: "cd_document_identifier",
				a:    oldCD.DocumentIdentifier,
				b:    newCD.DocumentIdentifier,
			},

			{
				name: "cd_previous_version",
				a:    oldCD.CurrentVersion,
				b:    newCD.PreviousVersion,
			},

			{
				name: "cd_current_version",
				a:    oldCD.NextVersion,
				b:    newCD.CurrentVersion,
			},

			{
				name: "cd_previous_version",
				a:    oldCD.DocumentRoot,
				b:    newCD.PreviousRoot,
			},
		}

		for _, c := range checks {
			if !utils.CheckMultiple32BytesFilled(c.a, c.b) {
				err = errors.AppendError(err, NewError(c.name, "missing identifiers"))
				continue
			}

			if !utils.IsSameByteSlice(c.a, c.b) {
				err = errors.AppendError(err, NewError(c.name, "mismatched"))
			}
		}

		if utils.IsEmptyByteSlice(newCD.NextVersion) {
			err = errors.AppendError(err, NewError("cd_next_version", centerrors.RequiredField))
		}

		return err
	})
}

// baseValidator validates the core document basic fields like identifier, versions, and salts
func baseValidator() Validator {
	return ValidatorFunc(func(_, model Model) error {
		dm, err := model.PackCoreDocument()
		if err != nil {
			return err
		}
		if dm.Document == nil {
			return errors.New("nil document")
		}
		cd := dm.Document

		if utils.IsEmptyByteSlice(cd.DocumentIdentifier) {
			err = errors.AppendError(err, NewError("cd_identifier", centerrors.RequiredField))
		}

		if utils.IsEmptyByteSlice(cd.CurrentVersion) {
			err = errors.AppendError(err, NewError("cd_current_version", centerrors.RequiredField))
		}

		if utils.IsEmptyByteSlice(cd.NextVersion) {
			err = errors.AppendError(err, NewError("cd_next_version", centerrors.RequiredField))
		}

		// double check the identifiers
		isSameBytes := utils.IsSameByteSlice

		// Problem (re-using an old identifier for NextVersion): CurrentVersion or DocumentIdentifier same as NextVersion
		if isSameBytes(cd.NextVersion, cd.DocumentIdentifier) ||
			isSameBytes(cd.NextVersion, cd.CurrentVersion) {
			err = errors.AppendError(err, NewError("cd_overall", centerrors.IdentifierReUsed))
		}

		// lets not do verbose check like earlier since these will be
		// generated by us mostly
		salts := cd.CoredocumentSalts
		if salts == nil || !checkSaltsFormat(salts) {
			err = errors.AppendError(err, NewError("cd_salts", centerrors.RequiredField))
		}

		return err
	})
}

func checkSaltsFormat(salts []*coredocumentpb.DocumentSalt) bool {
	for _, s := range salts {
		if !utils.Check32BytesFilled(s.Value) {
			return false
		}
	}
	return true
}

// signingRootValidator checks the existence of signing root
// recalculates the signing root and compares with existing one
func signingRootValidator() Validator {
	return ValidatorFunc(func(_, model Model) error {
		dm, err := model.PackCoreDocument()
		if err != nil {
			return err
		}

		cd := dm.Document
		if utils.IsEmptyByteSlice(cd.SigningRoot) {
			return errors.New("signing root missing")
		}

		dataRoot, err := model.CalculateDataRoot()
		if err != nil {
			return err
		}

		tree, err := dm.GetDocumentSigningTree(dataRoot)
		if err != nil {
			return errors.New("failed to calculate signing root: %v", err)
		}

		if !utils.IsSameByteSlice(cd.SigningRoot, tree.RootHash()) {
			return errors.New("signing root mismatch")
		}

		return nil
	})
}

// documentRootValidator checks the existence of document root
// recalculates the document root and compares with existing one
func documentRootValidator() Validator {
	return ValidatorFunc(func(_, model Model) error {
		dm, err := model.PackCoreDocument()
		if err != nil {
			return err
		}

		cd := dm.Document
		if utils.IsEmptyByteSlice(cd.DocumentRoot) {
			return errors.New("document root missing")
		}

		tree, err := dm.GetDocumentRootTree()
		if err != nil {
			return errors.New("failed to calculate document root: %v", err)
		}

		if !utils.IsSameByteSlice(cd.DocumentRoot, tree.RootHash()) {
			return errors.New("document root mismatch")
		}

		return nil
	})
}

// readyForSignaturesValidator validates self signature
// re-calculates the signature and compares with existing one
// assumes signing_root is already generated and verified
// Note: this needs to used only before document is sent for signatures from the collaborators
func readyForSignaturesValidator(didBytes, priv, pub []byte) Validator {
	return ValidatorFunc(func(_, model Model) error {
		dm, err := model.PackCoreDocument()
		if err != nil {
			return err
		}

		cd := dm.Document
		if len(cd.Signatures) != 1 {
			return errors.New("expecting only one signature")
		}

		s, err := crypto.SignMessage(priv, cd.SigningRoot, crypto.CurveSecp256K1)
		if err != nil {
			return err
		}
		sh := cd.Signatures[0]
		if !utils.IsSameByteSlice(didBytes, sh.EntityId) {
			err = errors.AppendError(err, NewError("cd_entity_id", "entity ID mismatch"))
		}

		if !utils.IsSameByteSlice(pub, sh.PublicKey) {
			err = errors.AppendError(err, NewError("cd_public_key", "public key mismatch"))
		}

		if !utils.IsSameByteSlice(s, sh.Signature) {
			err = errors.AppendError(err, NewError("cd_signature", "signature mismatch"))
		}

		return err
	})
}

// signaturesValidator validates all the signatures in the core document
// assumes signing root is verified
// Note: can be used when during the signature request on collaborator side and post signature collection on sender side
// Note: this will break the current flow where we proceed to anchor even signatures verification fails
func signaturesValidator(idService identity.ServiceDID) Validator {
	return ValidatorFunc(func(_, model Model) error {
		dm, err := model.PackCoreDocument()
		if err != nil {
			return err
		}

		cd := dm.Document
		if len(cd.Signatures) < 1 {
			return errors.New("atleast one signature expected")
		}

		for _, sig := range cd.Signatures {
			erri := idService.ValidateSignature(sig, cd.SigningRoot)
			if erri != nil {
				err = errors.AppendError(
					erri,
					errors.New(fmt.Sprintf("signature_%s", hexutil.Encode(sig.EntityId)), fmt.Sprintf("signature verification failed: %v", err)))
			}
		}
		return err
	})
}

// anchoredValidator checks if the document root matches the one on chain with specific anchorID
// assumes document root is generated and verified
func anchoredValidator(repo anchors.AnchorRepository) Validator {
	return ValidatorFunc(func(_, new Model) error {
		dm, err := new.PackCoreDocument()
		if err != nil {
			return errors.New("failed to get core document: %v", err)
		}

		cd := dm.Document
		anchorID, err := anchors.ToAnchorID(cd.CurrentVersion)
		if err != nil {
			return errors.New("failed to get anchorID: %v", err)
		}

		docRoot, err := anchors.ToDocumentRoot(cd.DocumentRoot)
		if err != nil {
			return errors.New("failed to get document root: %v", err)
		}

		gotRoot, err := repo.GetDocumentRootOf(anchorID)
		if err != nil {
			return errors.New("failed to get document root from chain: %v", err)
		}

		if !utils.IsSameByteSlice(docRoot[:], gotRoot[:]) {
			return errors.New("mismatched document roots")
		}

		return nil
	})
}

// SignatureRequestValidator returns a validator group with following validators
// base validator
// signing root validator
// signatures validator
// should be used when node receives a document requesting for signature
func SignatureRequestValidator(idService identity.ServiceDID) ValidatorGroup {
	return PostSignatureRequestValidator(idService)
}

// PreAnchorValidator is a validator group with following validators
// base validator
// signing root validator
// document root validator
// signatures validator
// should be called before pre anchoring
func PreAnchorValidator(idService identity.ServiceDID) ValidatorGroup {
	return ValidatorGroup{
		PostSignatureRequestValidator(idService),
		documentRootValidator(),
	}
}

// PostAnchoredValidator is a validator group with following validators
// PreAnchorValidator
// anchoredValidator
// should be called after anchoring the document/when received anchored document
func PostAnchoredValidator(idService identity.ServiceDID, repo anchors.AnchorRepository) ValidatorGroup {
	return ValidatorGroup{
		PreAnchorValidator(idService),
		anchoredValidator(repo),
	}
}

// PreSignatureRequestValidator is a validator group with following validators
// baseValidator
// signingRootValidator
// readyForSignaturesValidator
// should be called after sender signing the document and before requesting the document
func PreSignatureRequestValidator(centIDBytes, priv, pub []byte) ValidatorGroup {
	return ValidatorGroup{
		baseValidator(),
		signingRootValidator(),
		readyForSignaturesValidator(centIDBytes, priv, pub),
	}
}

// PostSignatureRequestValidator is a validator group with following validators
// baseValidator
// signingRootValidator
// signaturesValidator
// should be called after the signature collection/before preparing for anchoring
func PostSignatureRequestValidator(idService identity.ServiceDID) ValidatorGroup {
	return ValidatorGroup{
		baseValidator(),
		signingRootValidator(),
		signaturesValidator(idService),
	}
}
